# aws-etl-project2-fiap

./: .gitignore  ETL_glue_pregao_B3.json  README.md  aws_etl_projeto2_fiap.db  bitcoin.db  env_example  pyproject.toml  requirements.txt
parquet_arq/preco_bitcoin/ano=2025/mes=07/: dia=31.parquet
parquet_arq/preco_bitcoin/ano=2025/mes=08/: dia=01.parquet
parquet_arq/pregao_b3/ano=2025/mes=08/: dia=01.parquet
raw/pregao_b3/ano=2025/mes=07/: dia=31.parquet
raw/pregao_b3/ano=2025/mes=08/: dia=02.parquet
src/: bitoin_coin_gecko_api.py  create_bucket.py  create_buckets.py  create_firehose_stream.py  etl.py  ingest_strem_btc.py  query_db.py  scrapping_b3.py  sqs.py  trigger_glue.py  upload_buckets.py
