[project]
name = "aws-etl-project2-fiap"
version = "0.1.0"
description = ""
authors = [
    {name = "hguazza",email = "hmguazzelli@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3 (>=1.39.14,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "selenium (>=4.34.2,<5.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "lxml (>=6.0.0,<7.0.0)",
    "html5lib (>=1.1,<2.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)"
]

[tool.poetry]
packages = [{include = "aws_etl_project2_fiap", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
